[package]
name = "twine"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
path = "src/main.rs"
name = "twine"
required-features = [ "cli" ]

[dependencies]
once_cell = { version = "1.15.0", default-features = false, features = [ "std" ] }
scraper = { version = "0.13.0", default-features = false }
thiserror = "1.0.37"

# CLI
argh = { version = "0.1.8", optional = true }
anyhow = { version = "1.0.60", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-file" ], optional = true }
pikadick-util = { git = "https://github.com/ThatAnnoyingKid/pikadick-rs", features = [ "drop_remove_file" ], optional = true }
regex = { version = "1.6.0", optional = true }
reqwest = { version = "0.11.11", optional = true }
tokio = { version = "1.20.1", optional = true }
url = { version = "2.2.2", optional = true }


[features]
default = []

cli = [
    "anyhow",
    "argh",
    "reqwest",
    "tokio",
    "tokio/rt-multi-thread",
    "pikadick-util",
    "regex",
    "url",
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
