[package]
name = "twine"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
path = "src/main.rs"
name = "twine"
required-features = [ "cli" ]

[dependencies]
once_cell = { version = "1.17.1", default-features = false, features = [ "std" ] }
scraper = { version = "0.13.0", default-features = false }
thiserror = "1.0.38"

# CLI
argh = { version = "0.1.10", optional = true }
anyhow = { version = "1.0.69", optional = true }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-file", "drop-remove-path" ], optional = true }
regex = { version = "1.9.4", optional = true }
reqwest = { version = "0.11.14", optional = true }
tokio = { version = "1.24.1", optional = true }
url = { version = "2.3.1", optional = true }


[features]
default = []

cli = [
    "anyhow",
    "argh",
    "reqwest",
    "tokio",
    "tokio/rt-multi-thread",
    "nd-util",
    "regex",
    "url",
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
